# Developers-institute

./: README.md  requirements.txt
DEC21/New folder/Day_4/: loginpage.html
DEC21/New folder/Day_5/: index.html
DEC21/PortfolioProject/: main.html  style 1.css  style.css
DEC21/Week_1/Day_1/: tyle_avengers.css
DEC21/Week_1/Day_3/: index.html
DEC21/Week_15/users/users/: app.db  config.py  pyproject.toml  wsgi.py
DEC21/Week_15/users/users/app/: __init__.py  messages.pot  models.py  routes.py
DEC21/Week_15/users/users/app/templates/: index.html  login.html
DEC21/Week_15/users/users/app/translations/fr/LC_MESSAGES/: messages.mo  messages.po
DEC21/Week_4/: script.js
DEC21/Week_9/: EX.gold.py
DEC21/index.html/: index.html
DEC21/week_1/: style.css
OCT21/python/: API.docx  Encapsulation, Polymorphism, & More.docx  Json.docx  Sequences list tuple.docx  class and objects.docx  class.py  ex.docx  modules.docx  oop day 1.docx  py file.docx
QR/: test.py
Week6/: DC.sql  xp.2.sql  xp.gold.sql
full_time/week1/: HTML1.docx
python/: update_github.docx
week1/day1/: index.html  list.html
week1/day3/: EX1.js  page 1.html
week2/day1/: 1.html  index.html
week3/DAY1/: js1.js
week3/DAY3/: class.html  class_drag.drop.docx
week4/Day4/: daily.py
week4/Day5/: GOLD.py  ex.py  ex2.py
week4/day1/: bonus.py  gold.py  test.py
week4/day2/: 25.10.py  XP.py  class1.py
week5/: ninja.py
week5/Day1/: 1.py
week5/Day2/: xp.py  xp2.py
week5/Day3/: EX.py
week6/Day2/: gold.xp.sql  ninja.XP.sql
week6/Day3/: DC.sql
week6/Day4/: daily..py  xp.py
(+244 files in other folders)
