[tool.poetry]
name = "users"
version = "0.1.0"
description = ""
authors = ["Ayal Ganem <ayal.ganem@similarweb.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.1.1"
Flask-Login = "^0.6.0"
Flask-Babel = "^2.0.0"
Flask-Migrate = "^3.1.0"
Flask-SQLAlchemy = "^2.5.1"
Flask-WTF = "^1.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
